--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,51 @@
 /* My Styles */
+
+/* Background Color */
+
+body{
+    background-color: #f6f6f6;
+    margin: 1rem;
+}
+
+.gallery{
+    /* Defining the Grid */
+    display: grid;
+
+    /* Columns and Rows */
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+
+   /* Grid Gap */
+   grid-gap: 1rem;
+}
+
+/* Adjusting Gallery images and captions */
+.gallery figure, 
+.gallery img {
+  width: 100%;
+  height: 370px;
+  margin: 0;
+}
+
+/* Adjusting Image position */
+.gallery img {
+    display: block;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+
+  .gallery figure {
+    position: relative;
+  } 
+  
+  .gallery figcaption {
+      text-align: center;
+    font-size: 1.5em;
+    color: white;
+    background: rgba(0, 0, 0, 0.46);
+    
+    position: absolute;
+    bottom: 0; 
+    left: 0;
+    width: 100%;
+  }
