--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,34 @@
 /* My Styles */
 
-/* Background Color */
+/* Import fonts  */
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');
 
-body{
-    background-color: #f6f6f6;
-    margin: 1rem;
+figcaption {
+  font-family: 'Ubuntu', sans-serif;
+  text-transform: uppercase;
 }
 
-.gallery{
-    /* Defining the Grid */
-    display: grid;
+/* Background Color */
 
-    /* Columns and Rows */
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+body {
+  background-color: #f6f6f6;
+  margin: 1rem;
+}
 
-   /* Grid Gap */
-   grid-gap: 1rem;
+.gallery {
+  /* Defining the Grid */
+  display: grid;
+
+  /* Columns and Rows */
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+
+  /* Grid Gap */
+  grid-gap: 1rem;
 }
 
 /* Adjusting Gallery images and captions */
-.gallery figure, 
+.gallery figure,
 .gallery img {
   width: 100%;
   height: 370px;
@@ -29,23 +37,22 @@ body{
 
 /* Adjusting Image position */
 .gallery img {
-    display: block;
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
+  display: block;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
 
-  .gallery figure {
-    position: relative;
-  } 
-  
-  .gallery figcaption {
-      text-align: center;
-    font-size: 1.5em;
-    color: white;
-    background: rgba(0, 0, 0, 0.46);
-    
-    position: absolute;
-    bottom: 0; 
-    left: 0;
-    width: 100%;
-  }
+.gallery figure {
+  position: relative;
+}
+
+.gallery figcaption {
+  text-align: center;
+  font-size: 1.5em;
+  color: white;
+  background: rgba(0, 0, 0, 0.46);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
